Implement list by date range for order, update book swagger document
